add module tysring
