# src/routes/specification.routes.ts
@@ -1,16 +1,15 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationController } from "../modules/cars/useCases/listSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationController } from "../modules/cars/useCases/listSpecification/ListSpecificationController";
 
 const specificationsRouter = Router();
 
-specificationsRouter.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const specificationsController = new CreateSpecificationController();
+const listSpecificationController = new ListSpecificationController();
 
-specificationsRouter.get("/", (request, response) => {
-    return listSpecificationController.handle(request, response);
-});
+specificationsRouter.post("/", specificationsController.handle);
+
+specificationsRouter.get("/", listSpecificationController.handle);
 
 export { specificationsRouter };
