# src/swagger.json
@@ -1,29 +1,31 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentalX Documentation",
+        "title": "RentX Documentation",
         "description": "This is API Rent",
         "version": "1.0.0",
-        "contact" : {
+        "contact": {
             "email": "tyagolp@gmail.com"
         }
     },
     "paths": {
         "/categories": {
             "post": {
-                "tags": ["Category"],
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Create a category",
                 "description": "Create a new category",
-                "requestBody":{
-                    "content":{
-                        "application/json":{
+                "requestBody": {
+                    "content": {
+                        "application/json": {
                             "schema": {
                                 "type": "object",
                                 "properties": {
                                     "name": {
                                         "type": "string"
                                     },
-                                    "description":{
+                                    "description": {
                                         "type": "string"
                                     }
                                 },
@@ -45,23 +47,25 @@
                 }
             },
             "get": {
-                "tags": ["Category"],
+                "tags": [
+                    "Category"
+                ],
                 "summary": "List all categories",
                 "description": "List all category",
-                "responses":{
+                "responses": {
                     "200": {
                         "description": "Success",
                         "content": {
                             "application/json": {
-                                "schema":{
+                                "schema": {
                                     "type": "array",
                                     "items": {
                                         "type": "object",
-                                        "properties":{
+                                        "properties": {
                                             "name": {
                                                 "type": "string"
                                             },
-                                            "description":{
+                                            "description": {
                                                 "type": "string"
                                             }
                                         }
@@ -69,10 +73,109 @@
                                 }
                             }
                         }
-
                     }
                 }
-
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Category already exists"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification already exists"
+                    }
+                }
+            },
+            "get": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "List all specifications",
+                "description": "List all specifications",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
             }
         }
     }
